main.tf
terraform {
  required_version = ">= 1.5.0" # Adjust if needed

  required_providers {
    aws = {
      source  = "hashicorp/aws"
      version = "~> 6.2.0" # Important: specify version here
    }
  }
}

provider "aws" {
  region = "ap-south-1"
}

resource "aws_security_group" "web_sg" {
  name        = "allow_http"
  description = "Allow HTTP inbound traffic"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

resource "aws_instance" "web" {
  ami             = "ami-0e670eb768a5fc3d4" # Amazon Linux 2 in ap-south-1
  instance_type   = "t2.micro"
  security_groups = [aws_security_group.web_sg.name]
  associate_public_ip_address = aws_instance.web.public_ip != null ? true : false
  key_name = "sumit-github-key"
  user_data = <<-EOF
              #!/bin/bash
              yum update -y
              yum install -y httpd
              systemctl start httpd
              systemctl enable httpd
              echo "<h1>Welcome to Sumeet's Web Server</h1>" > /var/www/html/index.html
            EOF

  tags = {
    Name = "TerraformWebInstance"
  }
}
